macos/Classes/trtc_c_api/trtc_cloud.h

// 4.21
trtc_c_api int trtc_cloud_set_remote_video_stream_type(trtc_cloud instance,
                                                       const char* user_id,
                                                       int type);
// 4.22
trtc_c_api int trtc_cloud_mute_remote_video_stream(trtc_cloud instance,
                                                   const char* user_id,
                                                   int stream_type,
                                                   bool mute);
// 4.23
trtc_c_api int trtc_cloud_snapshot_video(trtc_cloud instance,
                                         const char* user_id,
                                         int stream_type,
                                         int source_type);
// 5.1
trtc_c_api int trtc_cloud_start_local_audio(trtc_cloud instance, int quality);
// 5.2
trtc_c_api int trtc_cloud_stop_local_audio(trtc_cloud instance);
// 5.3
trtc_c_api int trtc_cloud_mute_local_audio(trtc_cloud instance, bool mute);
// 5.4
trtc_c_api int trtc_cloud_mute_remote_audio(trtc_cloud instance, const char* user_id, bool mute);
// 5.5
trtc_c_api int trtc_cloud_mute_all_remote_audio(trtc_cloud instance, bool mute);
// 5.7
trtc_c_api int trtc_cloud_set_remote_audio_volume(trtc_cloud instance,
                                                  const char* user_id,
                                                  int volume);
// 5.8
trtc_c_api int trtc_cloud_set_audio_capture_volume(trtc_cloud instance, int volume);
// 5.9
trtc_c_api int trtc_cloud_get_audio_capture_volume(trtc_cloud instance);
// 5.10
trtc_c_api int trtc_cloud_set_audio_playout_volume(trtc_cloud instance, int volume);
// 5.11
trtc_c_api int trtc_cloud_get_audio_playout_volume(trtc_cloud instance);
// 5.12
trtc_c_api int trtc_cloud_enable_audio_volume_evaluation(
    trtc_cloud instance,
    bool enable,
    trtc_audio_volume_evaluate_params_t params);
// 5.15
trtc_c_api int trtc_cloud_start_local_recording(trtc_cloud instance,
                                                trtc_local_recording_params_t params);
// 5.16
trtc_c_api int trtc_cloud_stop_local_recording(trtc_cloud instance);
// 5.17
trtc_c_api int trtc_cloud_set_gravity_sensor_adaptive_mode(trtc_cloud instance, int mode);
// 6.1
trtc_c_api tx_device_manager trtc_cloud_get_device_manager(trtc_cloud instance);
// 7.1
trtc_c_api int trtc_cloud_set_beauty_style(trtc_cloud instance,
                                           int style,
                                           uint32_t beauty,
                                           uint32_t white,
                                           uint32_t ruddiness);
// 7.2
trtc_c_api int trtc_cloud_set_water_mark(trtc_cloud instance,
                                         int stream_type,
                                         const char* src_data,
                                         int src_type,
                                         uint32_t width,
                                         uint32_t height,
                                         float x_offset,
                                         float y_offset,
                                         float f_width_ratio,
                                         bool is_visible_on_local_preview);
// 8.1
trtc_c_api tx_audio_effect_manager trtc_cloud_get_audio_effect_manager(trtc_cloud instance);
// 8.2 TARGET_PLATFORM_DESKTOP || __ANDROID__
trtc_c_api int trtc_cloud_start_system_audio_loopback(trtc_cloud instance, const char* device_name);