lib/bindings/trtc/ffi_bindings.dart


  /// 4.21
  int set_remote_video_stream_type(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int type,
  ) {
    return _set_remote_video_stream_type(
      instance,
      user_id,
      type,
    );
  }

  late final _set_remote_video_stream_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('trtc_cloud_set_remote_video_stream_type');
  late final _set_remote_video_stream_type = _set_remote_video_stream_typePtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int)>();

  /// 4.22
  int mute_remote_video_stream(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int stream_type,
    bool mute,
  ) {
    return _mute_remote_video_stream(
      instance,
      user_id,
      stream_type,
      mute,
    );
  }

  late final _mute_remote_video_streamPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Bool)>>('trtc_cloud_mute_remote_video_stream');
  late final _mute_remote_video_stream = _mute_remote_video_streamPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int, bool)>();

  /// 4.23
  int snapshot_video(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int stream_type,
    int source_type,
  ) {
    return _snapshot_video(
      instance,
      user_id,
      stream_type,
      source_type,
    );
  }

  late final _snapshot_videoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Int)>>('trtc_cloud_snapshot_video');
  late final _snapshot_video = _snapshot_videoPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int, int)>();

  /// 5.1
  int start_local_audio(
    trtc_cloud instance,
    int quality,
  ) {
    return _start_local_audio(
      instance,
      quality,
    );
  }

  late final _start_local_audioPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_start_local_audio');
  late final _start_local_audio =
      _start_local_audioPtr.asFunction<int Function(trtc_cloud, int)>();

  /// 5.2
  int stop_local_audio(
    trtc_cloud instance,
  ) {
    return _stop_local_audio(
      instance,
    );
  }

  late final _stop_local_audioPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_local_audio');
  late final _stop_local_audio =
      _stop_local_audioPtr.asFunction<int Function(trtc_cloud)>();

  /// 5.3
  int mute_local_audio(
    trtc_cloud instance,
    bool mute,
  ) {
    return _mute_local_audio(
      instance,
      mute,
    );
  }

  late final _mute_local_audioPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool)>>(
          'trtc_cloud_mute_local_audio');
  late final _mute_local_audio =
      _mute_local_audioPtr.asFunction<int Function(trtc_cloud, bool)>();

  /// 5.4
  int mute_remote_audio(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    bool mute,
  ) {
    return _mute_remote_audio(
      instance,
      user_id,
      mute,
    );
  }

  late final _mute_remote_audioPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('trtc_cloud_mute_remote_audio');
  late final _mute_remote_audio = _mute_remote_audioPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, bool)>();

  /// 5.5
  int mute_all_remote_audio(
    trtc_cloud instance,
    bool mute,
  ) {
    return _mute_all_remote_audio(
      instance,
      mute,
    );
  }

  late final _mute_all_remote_audioPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool)>>(
          'trtc_cloud_mute_all_remote_audio');
  late final _mute_all_remote_audio =
      _mute_all_remote_audioPtr.asFunction<int Function(trtc_cloud, bool)>();

  /// 5.7
  int set_remote_audio_volume(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int volume,
  ) {
    return _set_remote_audio_volume(
      instance,
      user_id,
      volume,
    );
  }

  late final _set_remote_audio_volumePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('trtc_cloud_set_remote_audio_volume');
  late final _set_remote_audio_volume = _set_remote_audio_volumePtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int)>();

  /// 5.8
  int set_audio_capture_volume(
    trtc_cloud instance,
    int volume,
  ) {
    return _set_audio_capture_volume(
      instance,
      volume,
    );
  }

  late final _set_audio_capture_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_set_audio_capture_volume');
  late final _set_audio_capture_volume =
      _set_audio_capture_volumePtr.asFunction<int Function(trtc_cloud, int)>();

  /// 5.9
  int get_audio_capture_volume(
    trtc_cloud instance,
  ) {
    return _get_audio_capture_volume(
      instance,
    );
  }

  late final _get_audio_capture_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_get_audio_capture_volume');
  late final _get_audio_capture_volume =
      _get_audio_capture_volumePtr.asFunction<int Function(trtc_cloud)>();

  /// 5.10
  int set_audio_playout_volume(
    trtc_cloud instance,
    int volume,
  ) {
    return _set_audio_playout_volume(
      instance,
      volume,
    );
  }

  late final _set_audio_playout_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_set_audio_playout_volume');
  late final _set_audio_playout_volume =
      _set_audio_playout_volumePtr.asFunction<int Function(trtc_cloud, int)>();

  /// 5.11
  int get_audio_playout_volume(
    trtc_cloud instance,
  ) {
    return _get_audio_playout_volume(
      instance,
    );
  }

  late final _get_audio_playout_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_get_audio_playout_volume');
  late final _get_audio_playout_volume =
      _get_audio_playout_volumePtr.asFunction<int Function(trtc_cloud)>();

  /// 5.12
  int enable_audio_volume_evaluation(
    trtc_cloud instance,
    bool enable,
    trtc_audio_volume_evaluate_params_t params,
  ) {
    return _enable_audio_volume_evaluation(
      instance,
      enable,
      params,
    );
  }

  late final _enable_audio_volume_evaluationPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  trtc_cloud, ffi.Bool, trtc_audio_volume_evaluate_params_t)>>(
      'trtc_cloud_enable_audio_volume_evaluation');
  late final _enable_audio_volume_evaluation =
      _enable_audio_volume_evaluationPtr.asFunction<
          int Function(
              trtc_cloud, bool, trtc_audio_volume_evaluate_params_t)>();

  /// 5.15
  int start_local_recording(
    trtc_cloud instance,
    trtc_local_recording_params_t params,
  ) {
    return _start_local_recording(
      instance,
      params,
    );
  }

  late final _start_local_recordingPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_cloud, trtc_local_recording_params_t)>>(
      'trtc_cloud_start_local_recording');
  late final _start_local_recording = _start_local_recordingPtr
      .asFunction<int Function(trtc_cloud, trtc_local_recording_params_t)>();

  /// 5.16
  int stop_local_recording(
    trtc_cloud instance,
  ) {
    return _stop_local_recording(
      instance,
    );
  }

  late final _stop_local_recordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_local_recording');
  late final _stop_local_recording =
      _stop_local_recordingPtr.asFunction<int Function(trtc_cloud)>();

  /// 5.17
  int set_gravity_sensor_adaptive_mode(
    trtc_cloud instance,
    int mode,
  ) {
    return _set_gravity_sensor_adaptive_mode(
      instance,
      mode,
    );
  }

  late final _set_gravity_sensor_adaptive_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_set_gravity_sensor_adaptive_mode');
  late final _set_gravity_sensor_adaptive_mode =
      _set_gravity_sensor_adaptive_modePtr
          .asFunction<int Function(trtc_cloud, int)>();

  /// 6.1
  tx_device_manager get_device_manager(
    trtc_cloud instance,
  ) {
    return _get_device_manager(
      instance,
    );
  }

  late final _get_device_managerPtr =
      _lookup<ffi.NativeFunction<tx_device_manager Function(trtc_cloud)>>(
          'trtc_cloud_get_device_manager');
  late final _get_device_manager = _get_device_managerPtr
      .asFunction<tx_device_manager Function(trtc_cloud)>();

  /// 7.1
  int set_beauty_style(
    trtc_cloud instance,
    int style,
    int beauty,
    int white,
    int ruddiness,
  ) {
    return _set_beauty_style(
      instance,
      style,
      beauty,
      white,
      ruddiness,
    );
  }

  late final _set_beauty_stylePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Int, ffi.Uint32, ffi.Uint32,
              ffi.Uint32)>>('trtc_cloud_set_beauty_style');
  late final _set_beauty_style = _set_beauty_stylePtr
      .asFunction<int Function(trtc_cloud, int, int, int, int)>();

  /// 7.2
  int set_water_mark(
    trtc_cloud instance,
    int stream_type,
    ffi.Pointer<ffi.Char> src_data,
    int src_type,
    int width,
    int height,
    double x_offset,
    double y_offset,
    double f_width_ratio,
    bool is_visible_on_local_preview,
  ) {
    return _set_water_mark(
      instance,
      stream_type,
      src_data,
      src_type,
      width,
      height,
      x_offset,
      y_offset,
      f_width_ratio,
      is_visible_on_local_preview,
    );
  }

  late final _set_water_markPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              trtc_cloud,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Bool)>>('trtc_cloud_set_water_mark');
  late final _set_water_mark = _set_water_markPtr.asFunction<
      int Function(trtc_cloud, int, ffi.Pointer<ffi.Char>, int, int, int,
          double, double, double, bool)>();

  /// 7.3
  tx_beauty_manager get_beauty_manager(
    trtc_cloud instance,
  ) {
    return _get_beauty_manager(
      instance,
    );
  }

  late final _get_beauty_managerPtr =
      _lookup<ffi.NativeFunction<tx_beauty_manager Function(trtc_cloud)>>(
          'trtc_cloud_get_beauty_manager');
  late final _get_beauty_manager = _get_beauty_managerPtr
      .asFunction<tx_beauty_manager Function(trtc_cloud)>();

  /// 8.1
  tx_audio_effect_manager get_audio_effect_manager(
    trtc_cloud instance,
  ) {
    return _get_audio_effect_manager(
      instance,
    );
  }

  late final _get_audio_effect_managerPtr =
      _lookup<ffi.NativeFunction<tx_audio_effect_manager Function(trtc_cloud)>>(
          'trtc_cloud_get_audio_effect_manager');
  late final _get_audio_effect_manager = _get_audio_effect_managerPtr
      .asFunction<tx_audio_effect_manager Function(trtc_cloud)>();

  /// 8.2 TARGET_PLATFORM_DESKTOP
  int start_system_audio_loopback(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> device_name,
  ) {
    return _start_system_audio_loopback(
      instance,
      device_name,
    );
  }

  late final _start_system_audio_loopbackPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>)>>(
      'trtc_cloud_start_system_audio_loopback');
  late final _start_system_audio_loopback = _start_system_audio_loopbackPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>)>();
